--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
-title: Stackbit Fjord Theme
+title: Steptracks
 baseURL: /
 params:
   palette: yellow
   header:
-    title: Fjord
+    title: Steptracks
     tagline: Minimal and clean blog theme
     logo_img: images/logo.png
     bg_img: images/header-bg.jpg
